elkészült képpel együtt

--- a/Responsiv.html
+++ b/Responsiv.html
@@ -24,7 +24,7 @@
                 <div class="dobozok"></div>
             </div>
             <div id="green">
-                <div id="kep"></div>
+                <div id="kep"><img src="images.jfif" alt="sunshine"></div>
             </div>
         </div>
     </div>
