--- a/html/myCounter/Counter.html
+++ b/html/myCounter/Counter.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <div id="fejlec">
+            <p id="mycounter">My counter</p>
+        </div>
+        <div id="count">
+            <table>
+                
+            </table>
+        </div>  
+    </div>
     
 </body>
 </html>
