--- a/html/myCounter/Counter.html
+++ b/html/myCounter/Counter.html
@@ -13,7 +13,7 @@
         </div>
         <div id="count">
             <table>
-                
+                <th>Counter value:</th>
             </table>
         </div>  
     </div>
