--- a/html/myCounter/Counter.html
+++ b/html/myCounter/Counter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,21 @@
         </div>
         <div id="count">
             <table>
-                <th>Counter value:</th>
+                <td>
+                    asd
+                </td>
+                <tr>
+                    <th>Counter value:</th>
+                </tr>
+                <tr>
+                    <th>100</th>
+                </tr>
+                <td>
+                    asd
+                </td>
+                <td>
+                    asd 
+                </td>
             </table>
         </div>  
     </div>
